# Alpha-X-core

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: export_backtest_report.py  export_benchmark_report.py  fetch_external_context.py  fetch_multi_asset_ohlcv.py  fetch_ohlcv.py  fetch_truth_engine_1d.py  healthcheck.py  run_4h_pattern_discovery_study.py  run_backtest.py  run_benchmarks.py  run_distance_buffer_4h_study.py  run_distance_buffer_daily.py  run_distance_buffer_scheduler.py  run_feature_engine.py  run_hypotheses.py  run_labeling.py  run_model_baselines.py  run_model_policies.py  run_multi_asset_comparison.py  run_multi_asset_data_audit.py  run_policy_stress.py  run_refinements.py  run_regime_analysis.py  run_truth_engine.py  run_truth_robustness.py  run_validation.py
tests/: test_backtest_data_loader.py  test_backtest_engine.py  test_backtest_metrics.py  test_benchmark_data_loader.py  test_benchmark_metrics.py  test_buy_and_hold.py  test_dca.py  test_distance_buffer_4h_study.py  test_distance_buffer_execution.py  test_external_alignment.py  test_feature_engine.py  test_fetch_ohlcv_cli.py  test_labeling_fixed_horizon.py  test_labeling_next_bar.py  test_labeling_triple_barrier.py  test_model_policy.py  test_modeling_dataset.py  test_modeling_models.py  test_multi_asset_audit.py  test_multi_asset_common_window.py  test_multi_asset_comparison.py  test_multi_asset_loader.py  test_multi_asset_registry.py  test_ohlcv_backfill.py  test_ohlcv_gap_repair.py  test_ohlcv_storage.py  test_ohlcv_validation.py  test_policy_stress.py  test_refinement_resample.py  (+27 more)
(+160 files in other folders)
