[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alpha-x-core"
version = "0.1.0"
description = "Foundation layer for the ALPHA-X CORE quantitative system."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26,<3.0",
    "pandas>=2.2,<3.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.2,<3.0",
    "python-dotenv>=1.0,<2.0",
    "requests>=2.32,<3.0",
    "scikit-learn>=1.5,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9.0",
    "ruff>=0.6,<1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
